Bug 448861 - Kate unnecessarily asks if it is necessary to save a deleted file
Summary: Kate unnecessarily asks if it is necessary to save a deleted file
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.12.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-21 01:16 UTC by Podagric
Modified: 2023-04-10 21:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Podagric 2022-01-21 01:16:00 UTC
STEPS TO REPRODUCE
1. Open a file
2. Edit it but don't save
3. Access the menu File -> Delete

OBSERVED RESULT
When confirming the deletion of the file, Kate will ask if you want to save the changes, but there is no file anymore, it has been deleted.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.23.90
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2
Graphics Platform: X11
Comment 1 Jan Bidler 2022-07-12 15:42:35 UTC
Can confirm on 22.04.3

Operating System: Arch Linux
KDE Plasma Version: 5.25.3
KDE Frameworks Version: 5.96.0
Qt Version: 5.15.5
Kernel Version: 5.18.9-arch1-1 (64-bit)
Graphics Platform: Wayland
Comment 2 Bug Janitor Service 2023-03-11 02:01:50 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/1148
Comment 3 Christoph Cullmann 2023-04-10 21:23:48 UTC
Git commit ea929b22f1010d89efb8dc8f33205f1e1cc1f308 by Christoph Cullmann, on behalf of Nikita Karpei.
Committed on 10/04/2023 at 21:23.
Pushed by cullmann into branch 'master'.

Don't ask user if he wants to save modified document when deleting

M  +4    -0    apps/lib/katefileactions.cpp

https://invent.kde.org/utilities/kate/commit/ea929b22f1010d89efb8dc8f33205f1e1cc1f308