Don't ask user if he wants to save modified document when deleting

BUG: 448861